--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Chung-Yi Chi <cychi1210@gmail.com>",
   "dependencies": {
     "uglify-js": "2.4.8",
-    "clean-css": "2.0.4"
+    "clean-css": "2.0.4",
+    "coffee-script": "*",
+    "less": "*"
   }
 }
